gcc/testsuite/rust/rustc/ui/alloc-error/alloc-error-handler-bad-signature-3.rs
//@ compile-flags:-C panic=abort

#![feature(alloc_error_handler)]
#![no_std]
#![no_main]

struct Layout;

#[alloc_error_handler]
fn oom() -> ! { // { dg-error ".E0061." "" { target *-*-* } }
    loop {}
}

#[panic_handler]
fn panic(_: &core::panic::PanicInfo) -> ! { loop {} }

